--- a/sites/canton-times.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/canton-times.etypegoogle9.com/themes/cni/css/site.css
@@ -2,12 +2,12 @@
 .site-logo {
     width: 100%;
     margin: 0 auto;
-    max-width: 670px;
+    max-width: 940px;
 }
 
 .site-logo img {
     width: 100%;
-    max-width: 670px;
+    max-width: 940px;
 }
 
 /* SIMPLE ADS
@@ -26,8 +26,14 @@ article.node-webform .node-content-wrapper h1.title {
     margin-bottom: 0;
 }
 
+
 /* wide desktop browsers */
 @media only screen and (min-width: 959px) {
+
+    /* top menu */
+    #block-superfish-1 .content {
+        width: 1020px;
+    }
 
     /* dfp ads */
     #block-dfp-acadia-banner2 {
@@ -46,6 +52,10 @@ article.node-webform .node-content-wrapper h1.title {
         margin: 0;
     }
 
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 650px;
+    }
 }
 
 @media only screen and (max-width: 767px) {
