--- a/sites/canton-times.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/canton-times.etypegoogle9.com/themes/cni/css/site.css
@@ -30,7 +30,7 @@ article.node-webform .node-content-wrapper h1.title {
 /* wide desktop browsers */
 @media only screen and (min-width: 959px) {
 
-    /* top menu */
+    /* main menu */
     #block-superfish-1 .content {
         width: 1020px;
     }
