--- a/sites/eagleprint.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/eagleprint.etypegoogle9.com/themes/cni/css/site.css
@@ -29,6 +29,11 @@ article.node-webform .node-content-wrapper h1.title {
 /* wide desktop browsers */
 @media only screen and (min-width: 959px) {
 
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 795px;
+    }
+
     /* dfp ads */
     #block-dfp-acadia-banner2 {
         width: 468px;
