--- a/sites/colfaxchronicle.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/colfaxchronicle.etypegoogle9.com/themes/cni/css/site.css
@@ -2,12 +2,12 @@
 .site-logo {
     width: 100%;
     margin: 0 auto;
-    max-width: 670px;
+    max-width: 680px;
 }
 
 .site-logo img {
     width: 100%;
-    max-width: 670px;
+    max-width: 680px;
 }
 
 /* SIMPLE ADS
@@ -29,6 +29,11 @@ article.node-webform .node-content-wrapper h1.title {
 /* wide desktop browsers */
 @media only screen and (min-width: 959px) {
 
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 887px;
+    }
+
     /* dfp ads */
     #block-dfp-acadia-banner2 {
         width: 468px;
@@ -40,6 +45,13 @@ article.node-webform .node-content-wrapper h1.title {
 /* desktop browsers */
 @media only screen and (min-width: 768px) and (max-width: 958px) {
 
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 725px;
+        font-size: 0.8em;
+    }
+
+
     /* dfp ads */
     #block-dfp-acadia-banner2 {
         width: 468px;
@@ -49,6 +61,12 @@ article.node-webform .node-content-wrapper h1.title {
 }
 
 @media only screen and (max-width: 767px) {
+
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 650px;
+        font-size: 0.8em;
+    }
 
     /* Hide larger DFP ads on non full-size browsers */
     #block-dfp-acadia-leaderboard, #block-dfp-acadia-banner2 {
