--- a/sites/eagleprint.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/eagleprint.etypegoogle9.com/themes/cni/css/site.css
@@ -2,12 +2,22 @@
 .site-logo {
     width: 100%;
     margin: 0 auto;
-    max-width: 670px;
+    max-width: 748px;
 }
 
 .site-logo img {
     width: 100%;
-    max-width: 670px;
+    max-width: 748px;
+}
+
+/* menu color */
+#block-superfish-1 {
+    background-color: #336633;
+    height: 33px;
+}
+
+.sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
+    background: #336633;
 }
 
 /* SIMPLE ADS
@@ -31,7 +41,7 @@ article.node-webform .node-content-wrapper h1.title {
 
     /* main menu */
     #block-superfish-1 .content {
-        width: 795px;
+        width: 785px;
     }
 
     /* dfp ads */
@@ -44,6 +54,12 @@ article.node-webform .node-content-wrapper h1.title {
 
 /* desktop browsers */
 @media only screen and (min-width: 768px) and (max-width: 958px) {
+
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 635px;
+        font-size: 0.8em;
+    }
 
     /* dfp ads */
     #block-dfp-acadia-banner2 {
