--- a/sites/sulphurtimes.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/sulphurtimes.etypegoogle9.com/themes/cni/css/site.css
@@ -13,6 +13,7 @@
 /* main-menu background-color */
 #block-superfish-1 {
     background-color: #094385;
+    max-height: 33px;
 }
 
 .sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
