--- a/sites/colfaxchronicle.etypegoogle9.com/themes/cni/css/theme.css
+++ b/sites/colfaxchronicle.etypegoogle9.com/themes/cni/css/theme.css
@@ -459,10 +459,10 @@ article .field-image {
     list-style-type: decimal;
 }
 
-/* normalize lists on Basic Pages */
-.content .node-page ul {
+/* normalize lists on Basic Pages and Articles */
+.content .node-page ul, .content .node-article ul {
     margin: 0 0 1em 1em;
-    list-style: disc inside;
+    list-style: disc outside;
 }
 
 /* USER MENU
@@ -584,7 +584,6 @@ article .field-image {
 }
 
 /* Main Menu custom styling */
-
 #block-superfish-1 {
     background-color: #094385;
     height: 33px;
