--- a/sites/homerindex.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/homerindex.etypegoogle9.com/themes/cni/css/site.css
@@ -10,6 +10,11 @@
     max-width: 1290px;
 }
 
+.front h1.title {
+    display: none;
+    visibility: hidden;
+}
+
 /* main-menu background-color */
 #block-superfish-1 {
     background-color: #094385;
