--- a/sites/homerindex.etypegoogle9.com/themes/cni/css/theme.css
+++ b/sites/homerindex.etypegoogle9.com/themes/cni/css/theme.css
@@ -306,8 +306,8 @@ article .field-image {
     padding: 0;
 }
 
-/* weather block in sidebar */
-#block-block-1 .block-inner {
+/* weather block */
+#block-block-35 .block-inner {
     padding: 0;
     margin: 0;
     border-style: none;
