--- a/sites/colfaxchronicle.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/colfaxchronicle.etypegoogle9.com/themes/cni/css/site.css
@@ -65,6 +65,12 @@ article.node-webform .node-content-wrapper h1.title {
 
     /* Hide larger DFP ads on non full-size browsers */
 
+    /* weather block */
+    #block-block-1 {
+        visibility: hidden;
+        display: none;
+    }
+
 }
 
 @media only screen and (min-width: 768px) {
