--- a/sites/homerindex.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/homerindex.etypegoogle9.com/themes/cni/css/site.css
@@ -73,11 +73,17 @@ article.node-webform .node-content-wrapper h1.title {
 @media only screen and (max-width: 767px) {
 
     /* Hide larger DFP ads on non full-size browsers */
+    /* weather block */
+    #block-block-35 {
+        visibility: hidden;
+        display: none;
+    }
 
 }
 
 @media only screen and (min-width: 768px) {
 
     /* Hide larger DFP ads on non full-size browsers */
+
 
 }
