--- a/sites/gspublishing.etypegoogle9.com/themes/cni/css/site.css
+++ b/sites/gspublishing.etypegoogle9.com/themes/cni/css/site.css
@@ -12,11 +12,11 @@
 
 /* main-menu background-color */
 #block-superfish-1 {
-    background-color: #094385;
+    background-color: #CC0000;
 }
 
 .sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
-    background: #094385;
+    background: #CC0000;
 }
 
 /* SIMPLE ADS
