--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -315,7 +315,7 @@ article .field-image {
 }
 
 .postscript-wrapper {
-    padding: 20px 0 0;
+    padding: 1em 1em 0;
     margin: 0;
     background: url(../images/postscript-bg.png);
     border-top: 3px solid #252525;
@@ -336,7 +336,7 @@ article .field-image {
 
 .postscript-wrapper h3 {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 0.4em;
 }
 
 .postscript-wrapper h3 span {
@@ -399,6 +399,12 @@ article .field-image {
     list-style-type: circle;
     list-style-image: none;
     list-style-position: inside;
+}
+
+/* font */
+#postscript p, #postscript a {
+    font-family: 'Lato', sans-serif;
+    font-size: 0.8em;
 }
 
 /* FOOTER
