--- a/sites/southarkansassun.etypegoogle9.com/cni-site.css
+++ b/sites/southarkansassun.etypegoogle9.com/cni-site.css
@@ -23,12 +23,8 @@
 #block-system-user-menu {
     background-color: #ffffff;
     width: 100%;
-}
-
-#block-system-user-menu {
-    background-color: #ffffff;
-    width: 100%;
     height: 27px;
+    border-bottom: ;
 }
 
 #block-system-user-menu ul.menu li {
@@ -58,6 +54,16 @@
     /* main menu */
     #block-superfish-1 .content {
         width: 870px;
+    }
+
+    /* user-menu */
+    #block-system-user-menu .content {
+        width: 708px;
+    }
+
+    #block-system-user-menu {
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
     }
 
     /* dfp ads */
