south arkansas sun

--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -409,7 +409,11 @@ article .field-image {
 
 /* FOOTER
 --------------------------------------------------------------------------*/
-
+.region-footer {
+    margin-top: 1em;
+    font-family: lato;
+    font-size: 0.8em;
+}
 
 /* LISTS
 --------------------------------------------------------------------------*/
