south arkansas sun

--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -411,7 +411,7 @@ article .field-image {
 --------------------------------------------------------------------------*/
 .region-footer {
     margin-top: 1em;
-    font-family: lato;
+    font-family: 'Lato', sans-serif;
     font-size: 0.8em;
 }
 
