--- a/sites/waunetabreeze.etypegoogle9.com/cni-site.css
+++ b/sites/waunetabreeze.etypegoogle9.com/cni-site.css
@@ -12,11 +12,37 @@
 
 /* main-menu background-color */
 #block-superfish-1 {
-    background-color: red;
+    background-color: #660000;
 }
 
 .sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
-    background: red;
+    background: #660000;
+}
+
+/* User Menu */
+#block-system-user-menu {
+    background-color: #ffffff;
+    width: 100%;
+    height: 27px;
+    border-bottom: 1px solid black;
+}
+
+#block-system-user-menu .content {
+    margin: 0 auto;
+}
+
+#block-system-user-menu ul.menu li {
+    height: 27px;
+}
+
+#block-system-user-menu ul.menu li a {
+    font-size: 0.8em;
+}
+
+#block-system-user-menu ul.menu li a {
+    color: #333333;
+    height: 27px;
+    line-height: 27px;
 }
 
 /* SIMPLE ADS
@@ -34,6 +60,11 @@
         width: 979px;
     }
 
+    /* user-menu */
+    #block-system-user-menu .content {
+        width: 574px;
+    }
+
     /* dfp ads */
 
 }
@@ -45,6 +76,11 @@
     #block-superfish-1 .content {
         width: 797px;
         font-size: 0.8em;
+    }
+
+    /* user-menu */
+    #block-system-user-menu .content {
+        width: 468px;
     }
 
     /* dfp ads */
