--- a/sites/southarkansassun.etypegoogle9.com/cni-site.css
+++ b/sites/southarkansassun.etypegoogle9.com/cni-site.css
@@ -19,32 +19,6 @@
     background: #000000;
 }
 
-/* User Menu */
-#block-system-user-menu {
-    background-color: #ffffff;
-    width: 100%;
-    height: 27px;
-    border-bottom: 1px solid black;
-}
-
-#block-system-user-menu .content {
-    margin: 0 auto;
-}
-
-#block-system-user-menu ul.menu li {
-    height: 27px;
-}
-
-#block-system-user-menu ul.menu li a {
-    font-size: 0.8em;
-}
-
-#block-system-user-menu ul.menu li a {
-    color: #333333;
-    height: 27px;
-    line-height: 27px;
-}
-
 /* SIMPLE ADS
 --------------------------------------------------------------------------*/
 
@@ -60,8 +34,8 @@
         width: 574px;
     }
 
-    /* user-menu */
-    #block-system-user-menu .content {
+    /* user-menu below main menu */
+    .region main-menu #block-system-user-menu .content {
         width: 574px;
     }
 
@@ -77,8 +51,8 @@
         width: 468px;
     }
 
-    /* user-menu */
-    #block-system-user-menu .content {
+    /* user-menu below main menu */
+    .region main-menu #block-system-user-menu .content {
         width: 468px;
     }
 
