--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -535,26 +535,26 @@ article .field-image {
 }
 
 /* user menu below main menu in .region-main-menu */
-.region-main-menu #block-system-user-menu {
+#main-menu #block-system-user-menu {
     background-color: #ffffff;
     width: 100%;
     height: 27px;
     border-bottom: 1px solid black;
 }
 
-.region-main-menu #block-system-user-menu .content {
+#main-menu #block-system-user-menu .content {
     margin: 0 auto;
 }
 
-.region-main-menu #block-system-user-menu ul.menu li {
+#main-menu #block-system-user-menu ul.menu li {
     height: 27px;
 }
 
-.region-main-menu #block-system-user-menu ul.menu li a {
+#main-menu #block-system-user-menu ul.menu li a {
     font-size: 0.8em;
 }
 
-.region-main-menu #block-system-user-menu ul.menu li a {
+#main-menu #block-system-user-menu ul.menu li a {
     color: #333333;
     height: 27px;
     line-height: 27px;
