--- a/sites/waunetabreeze.etypegoogle9.com/cni-site.css
+++ b/sites/waunetabreeze.etypegoogle9.com/cni-site.css
@@ -35,7 +35,7 @@
     }
 
     /* user-menu below main menu */
-    .region main-menu #block-system-user-menu .content {
+    #main-menu #block-system-user-menu .content {
         width: 420px;
     }
 
@@ -52,7 +52,7 @@
     }
 
     /* user-menu below main menu */
-    .region main-menu #block-system-user-menu .content {
+    #main-menu #block-system-user-menu .content {
         width: 411px;
     }
 
