--- a/sites/granttribune.etypegoogle9.com/cni-site.css
+++ b/sites/granttribune.etypegoogle9.com/cni-site.css
@@ -26,12 +26,18 @@
 /* Google DFP Ads
 --------------------------------------------------------------------------*/
 
+
 /* wide desktop browsers */
 @media only screen and (min-width: 959px) {
 
     /* main menu */
     #block-superfish-1 .content {
-        width: 979px;
+        width: 820px;
+    }
+
+    /* user-menu below main menu */
+    #main-menu #block-system-user-menu .content {
+        width: 330px;
     }
 
     /* dfp ads */
@@ -43,8 +49,12 @@
 
     /* main menu */
     #block-superfish-1 .content {
-        width: 797px;
-        font-size: 0.8em;
+        width: 710px;
+    }
+
+    /* user-menu below main menu */
+    #main-menu #block-system-user-menu .content {
+        width: 318px;
     }
 
     /* dfp ads */
