holyoke user menu

--- a/sites/holyokeenterprise.etypegoogle9.com/cni-site.css
+++ b/sites/holyokeenterprise.etypegoogle9.com/cni-site.css
@@ -34,6 +34,11 @@
         width: 979px;
     }
 
+    /* user-menu below main menu */
+    #main-menu #block-system-user-menu .content {
+        width: 420px;
+    }
+
     /* dfp ads */
 
 }
@@ -45,6 +50,11 @@
     #block-superfish-1 .content {
         width: 797px;
         font-size: 0.8em;
+    }
+
+    /* user-menu below main menu */
+    #main-menu #block-system-user-menu .content {
+        width: 420px;
     }
 
     /* dfp ads */
