--- a/sites/imperialrepublican.etypegoogle9.com/cni-site.css
+++ b/sites/imperialrepublican.etypegoogle9.com/cni-site.css
@@ -31,7 +31,12 @@
 
     /* main menu */
     #block-superfish-1 .content {
-        width: 979px;
+        width: 820px;
+    }
+
+    /* user-menu below main menu */
+    #main-menu #block-system-user-menu .content {
+        width: 326px;
     }
 
     /* dfp ads */
@@ -43,8 +48,12 @@
 
     /* main menu */
     #block-superfish-1 .content {
-        width: 797px;
-        font-size: 0.8em;
+        width: 667px;
+    }
+
+    /* user-menu below main menu */
+    #main-menu #block-system-user-menu .content {
+        width: 326px;
     }
 
     /* dfp ads */
