--- a/sites/holyokeenterprise.etypegoogle9.com/cni-site.css
+++ b/sites/holyokeenterprise.etypegoogle9.com/cni-site.css
@@ -12,11 +12,11 @@
 
 /* main-menu background-color */
 #block-superfish-1 {
-    background-color: red;
+    background-color: #009933;
 }
 
 .sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
-    background: red;
+    background: #009933;
 }
 
 /* SIMPLE ADS
