--- a/sites/all/modules/views_slideshow/contrib/views_slideshow_cycle/views_slideshow_cycle.css
+++ b/sites/all/modules/views_slideshow/contrib/views_slideshow_cycle/views_slideshow_cycle.css
@@ -18,7 +18,7 @@
 }
 
 .views-slideshow-pager-fields > div{
-  padding-left: 10px;
+  /* padding-left: 10px; */
 }
 
 .views-slideshow-pager-fields .active img {
