--- a/sites/all/themes/cni/css/responsive.css
+++ b/sites/all/themes/cni/css/responsive.css
@@ -2,8 +2,17 @@
 @media only screen and (min-width: 959px) {
 
     /* main menu */
-    #main-menu ul.menu {
-        margin: 0;
+    #main-menu .content {
+        width: 100%;
+    }
+
+    #main-menu #block-superfish-1 ul.menu {
+        max-width: 960px;
+        white-space: nowrap;
+    }
+
+    #main-menu ul.menu li, .sf-menu.sf-style-space {
+        float: none;
     }
 
     #main-menu ul.menu li ul {
@@ -14,7 +23,7 @@
         padding: 0 8px;
     }
 
-    #block-superfish-1 ul #menu-1797-1 {
+    #main-menu #block-superfish-1 ul #menu-1797-1 {
         display: none;
     }
 
@@ -33,8 +42,12 @@
         width: 100%;
     }
 
-    #main-menu ul.menu li li a, #main-menu ul.menu li li a.active {
+    #main-menu ul.menu li li a {
         padding: 0 8px;
+        color: #ffffff;
+    }
+
+    #main-menu ul.menu li li a.active {
         color: #000000;
     }
 
@@ -42,6 +55,12 @@
     #main-menu ul.menu li li a:hover,
     #main-menu ul.menu li ul li a.active:hover {
         background-color: #eaeaea;
+    }
+
+    #main-menu #block-system-user-menu ul.menu {
+        margin: 0 auto;
+        max-width: 800px;
+        white-space: nowrap;
     }
 
     .page-node.not-logged-in .content .node-content-wrapper {
@@ -54,13 +73,7 @@
     }
 
     .container_12 #postscript .grid_4 {
-        width: 286px;
-    }
-
-    /* galleria */
-    .galleria-theme-classic .galleria-info {
-        left: 0;
-        width: 215px;
+        width: inherit;
     }
 
 }
@@ -68,17 +81,27 @@
 /* desktop browsers */
 @media only screen and (max-width: 958px) and (min-width: 768px) {
 
+    /* main menu */
+    #main-menu .content {
+        width: 100%;
+    }
+
     #block-superfish-1 ul #menu-1797-1 {
         display: none;
     }
 
-    #main-menu ul.menu {
-        margin: 0;
+    #block-superfish-1 ul.menu {
+        margin: 0 auto;
+        white-space: nowrap;
+    }
+
+    #main-menu ul.menu li, .sf-menu.sf-style-space {
+        float: none;
     }
 
     #main-menu ul.menu li a, #main-menu ul.menu li li a, #main-menu ul.menu li li a.active {
         padding: 0 7px;
-        font-size: 0.8em;
+        font-size: 13px;
     }
 
     #main-menu ul.menu li ul {
@@ -100,8 +123,12 @@
         width: 100%;
     }
 
-    #main-menu ul.menu li li a, #main-menu ul.menu li li a.active {
+    #main-menu ul.menu li li a {
         padding: 0 10px;
+        color: #ffffff;
+    }
+
+    #main-menu ul.menu li li a.active {
         color: #000000;
     }
 
@@ -171,16 +198,6 @@
     /* footer */
     .postscript-wrapper {
         margin-right: 10px;
-    }
-
-    .container_12 #postscript .grid_4 {
-        width: 30%;
-    }
-
-    /* galleria */
-    .galleria-theme-classic .galleria-info {
-        left: 0;
-        width: 150px;
     }
 
 }
@@ -304,15 +321,6 @@
         background: none;
     }
 
-    .region-postscript-2 {
-        display: none;
-        visibility: hidden;
-    }
-
-    .region-postscript-4 {
-        margin-top: 1em;
-    }
-
     /* weather block */
     #block-block-1 .block-inner {
         border: none;
@@ -324,6 +332,7 @@
         display: none;
         visibility: hidden;
     }
+
 }
 
 /* larger phones */
@@ -446,22 +455,7 @@
 
     .postscript-wrapper h3 {
         margin-left: 0;
-        margin-bottom: 10px;
         background: none;
-    }
-
-    .region-postscript-2 {
-        display: none;
-        visibility: hidden;
-    }
-
-    /* override widths for .grid_3 in footer */
-    .container_12 .postscript-wrapper .grid_3 {
-        width: 49% !important;
-    }
-
-    .region-postscript-4 {
-        margin-top: 1em;
     }
 
     /* weather block */
@@ -474,13 +468,6 @@
     .region-content-bottom .block-dfp, .region-main-menu-second-level .block-dfp {
         display: none;
         visibility: hidden;
-    }
-
-    /* galleria fixes */
-    .galleria-theme-classic .galleria-info {
-        width: 100%;
-        top: 10px;
-        left: 0;
     }
 
 }
@@ -550,7 +537,7 @@
     }
 
     .video .node-teaser .node-content-wrapper {
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     .node-teaser .field-name-field-video iframe {
@@ -593,11 +580,6 @@
     }
 
     /* FOOTER */
-    #postscript .grid_4 {
-        width: inherit;
-        margin-left: 1em;
-    }
-
     .postscript-wrapper {
         padding: 1em;
         margin: 0;
@@ -606,22 +588,7 @@
 
     .postscript-wrapper h3 {
         margin-left: 0;
-        margin-bottom: 10px;
         background: none;
-    }
-
-    .region-postscript-2 {
-        display: none;
-        visibility: hidden;
-    }
-
-    /* override widths for .grid_3 in footer */
-    .container_12 .postscript-wrapper .grid_3 {
-        width: 49% !important;
-    }
-
-    .region-postscript-4 {
-        margin-top: 1em;
     }
 
     /* weather block */
@@ -636,12 +603,6 @@
         visibility: hidden;
     }
 
-    /* galleria fixes */
-    .galleria-theme-classic .galleria-info {
-        width: 100%;
-        top: 10px;
-        left: 0;
-    }
 }
 
 /* less granular switch for big and small */
@@ -652,8 +613,12 @@
         visibility: hidden;
     }
 
-    /* space for Follow Block */
-    .region-postscript-3 .block {
+    #postscript {
+        flex-wrap: wrap;
+    }
+
+    /* add space after menu */
+    #postscript .grid_4 #block-etype-follow {
         margin-top: 1em;
     }
 
