--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -607,6 +607,7 @@ article .field-image {
     max-height: 85px;
     margin: 0 auto;
     font-family: 'Lato', sans-serif;
+    font-size: 13px;
 }
 
 #main-menu ul.menu li a {
