--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -1011,9 +1011,9 @@ article .field-image {
     background: url(../images/instagram.png) no-repeat;
 }
 
-.googleplus {
+/*.googleplus {
     background: url(../images/googleplus.png) no-repeat;
-}
+}*/
 
 /* MISC
 --------------------------------------------------------------------------*/
