--- a/sites/all/themes/cni/css/ads.css
+++ b/sites/all/themes/cni/css/ads.css
@@ -37,10 +37,35 @@
     padding: 1em;
 }
 
-.region-preface-1  .block-simpleads > div > div > div > div > div {
+.region-preface-1 .block-simpleads > div > div > div > div > div {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+
+/* OWN LOCAL
+--------------------------------------------------------------------------*/
+#block-etype-own-local .block-inner {
+    padding: 0;
+    margin: 0;
+    border: none;
+    box-shadow: none;
+}
+
+#block-etype-own-local .block-inner .content {
+    padding: 0;
+}
+
+/* css for Crowdy news sidebar ads */
+
+#CrowdynewsAd {
+    margin: -20px;
+}
+
+/* css for etype google DFP sidebar ads */
+
+#div-gpt-ad-1487352373268-1 {
+    margin: -20px;
 }
 
 /* css for etype google DFP bottom leaderboard */
