--- a/sites/thehardwickgazette.etypegoogle9.com/themes/cni/css/theme.css
+++ b/sites/thehardwickgazette.etypegoogle9.com/themes/cni/css/theme.css
@@ -732,10 +732,12 @@ article .field-image {
     background: #eeeeee;
 }
 
+/*get rid of read more by add display none*/
 .node ul.links li.node-readmore a {
     font-size: 0.8em;
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
+	display:none;
 }
 
 .node .taxonomy .field-type-taxonomy-term-reference {
