--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -90,7 +90,7 @@ h3.site-slogan {
 
 /* SLIDESHOW
 --------------------------------------------------------------------------*/
-#block-views-slideshow-block .block-inner {
+#main-content #block-views-slideshow-block .block-inner {
     padding: 0 0 20px 0;
 }
 
