--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -90,6 +90,8 @@ h3.site-slogan {
 
 /* SLIDESHOW
 --------------------------------------------------------------------------*/
+
+/* override #main-content .block-inner */
 #main-content #block-views-slideshow-block .block-inner {
     padding: 0 0 20px 0;
 }
@@ -146,8 +148,7 @@ h3.site-slogan {
 
 .view-slideshow .views-slideshow-controls-bottom .views-field-field-image img, .view-slideshow .views-slideshow-controls-bottom .views-field-field-video img {
     display: block;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin: 0;
     float: left;
     opacity: 0.5;
     border: 1px solid #333333;
@@ -156,7 +157,7 @@ h3.site-slogan {
 
 .view-slideshow .views-slideshow-controls-bottom .views-field-field-image img:hover, .view-slideshow .views-slideshow-controls-bottom .views-field-field-video img:hover {
     opacity: 1;
-    border: 1px solid #000
+    border: 1px solid #000;
 }
 
 .view-slideshow .views-slideshow-controls-bottom .active .views-field-field-image img, .view-slideshow .views-slideshow-controls-bottom .active .views-field-field-video img {
@@ -171,6 +172,13 @@ h3.site-slogan {
     font-family: 'Lato', sans-serif;
     font-size: 0.7em;
 }
+
+#widget_pager_bottom_slideshow-block {
+    display: flex;
+    margin: 0;
+    justify-content: space-around;
+}
+
 
 /* override module defaults */
 .views-slideshow-pager-fields > div {
