--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -173,7 +173,7 @@ h3.site-slogan {
     font-size: 0.7em;
 }
 
-#widget_pager_bottom_slideshow-block {
+widget_pager_bottom_slideshow-block_1 {
     display: flex;
     margin: 0;
     justify-content: space-around;
