--- a/sites/all/themes/cni/css/responsive.css
+++ b/sites/all/themes/cni/css/responsive.css
@@ -473,7 +473,7 @@
 @media only screen and (max-width: 767px) {
 
     #page, .front .main-content-wrapper {
-        margin-top: 0;
+        margin-top: 7px;
     }
 
     #postscript {
