--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -260,7 +260,7 @@ h3.site-slogan {
 --------------------------------------------------------------------------*/
 
 .front .main-content-wrapper {
-    margin-top: 10px;
+    /*margin-top: 10px;*/
 }
 
 #main-content .block-inner, #preface .block-inner, h1#page-title {
