--- a/sites/perrysburg.etypegoogle9.com/thanksgivingslider/engine1/style.css
+++ b/sites/perrysburg.etypegoogle9.com/thanksgivingslider/engine1/style.css
@@ -3,9 +3,9 @@
  *	template Block
  */
 
-#wowslider-container1 { 
-	zoom: 1; 
-	position: relative; 
+#wowslider-container1 {
+	zoom: 1;
+	position: relative;
 	max-width:640px;
 	margin:0px auto 0px;
 	z-index:100;
@@ -15,7 +15,7 @@
 * html #wowslider-container1{ width:640px }
 #wowslider-container1 .ws_images ul{
 	position:relative;
-	width: 10000%; 
+	width: 10000%;
 	height:auto;
 	left:0;
 	list-style:none;
@@ -55,14 +55,14 @@
 	border:none 0;
 	max-width: none;
 }
-#wowslider-container1 a{ 
-	text-decoration: none; 
-	outline: none; 
-	border: none; 
+#wowslider-container1 a{
+	text-decoration: none;
+	outline: none;
+	border: none;
 }
 
-#wowslider-container1  .ws_bullets { 
-	font-size: 0px; 
+#wowslider-container1  .ws_bullets {
+	font-size: 0px;
 	float: left;
 	position:absolute;
 	z-index:70;
@@ -75,28 +75,28 @@
 	display:none;
 }
 
-#wowslider-container1 .ws_bullets { 
-	padding: 10px; 
+#wowslider-container1 .ws_bullets {
+	padding: 10px;
 }
-#wowslider-container1 .ws_bullets a { 
-	margin-left: 5px; 
-	height: 10px; 
-	width: 10px; 
-	float: left; 
-	border: 1px solid #B8C4CF; 
-	color: transparent; 
-	text-indent: 0px; 
+#wowslider-container1 .ws_bullets a {
+	margin-left: 5px;
+	height: 10px;
+	width: 10px;
+	float: left;
+	border: 1px solid #B8C4CF;
+	color: transparent;
+	text-indent: 0px;
 	background-image:url("data:image/gif;base64,");
 	position:relative;
 }
-#wowslider-container1 .ws_selbull { 
-	background-color: #B8C4CF; 
-	color: #FFFFFF; 
+#wowslider-container1 .ws_selbull {
+	background-color: #B8C4CF;
+	color: #FFFFFF;
 }
 
-#wowslider-container1 .ws_bullets a:hover, #wowslider-container1 .ws_overbull { 
+#wowslider-container1 .ws_bullets a:hover, #wowslider-container1 .ws_overbull {
 	background-color: #dae9f6;
-	color: #FFFFFF; 
+	color: #FFFFFF;
 }
 
 #wowslider-container1 a.ws_next, #wowslider-container1 a.ws_prev {
@@ -108,9 +108,9 @@
 	margin-top:-15px;
 	line-height:30px;
 	z-index:60;
-	background-color: #000000; 
-	color: #FFFFFF; 
-	padding: 0px 10px; 
+	background-color: #000000;
+	color: #FFFFFF;
+	padding: 0px 10px;
 	opacity:0.7;
 	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
 }
@@ -141,7 +141,7 @@
 	font-family: Tahoma,Arial,Helvetica;
 	font-size: 14px;
 	opacity:0.55;
-	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=55);	
+	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=55);
 }
 #wowslider-container1 .ws-title div{
 	padding-top:5px;
@@ -192,4 +192,7 @@
 }
 #wowslider-container1 .ws_bulframe span{
 	position:absolute;
+}
+.preface-wrapper #block-block-42 .content {
+  background: fff;
 }
